fixed the click anywhere routing bug. You can now click anywhere and be routed to that spot

--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -92,6 +92,7 @@
           <div class="card-body">
             <a href="https://www.planetware.com/tourist-attractions-/dublin-irl-db-dub.htm" target="_blank">Need inspiration? Click here for trip ideas</a>
             <p>Click anywhere on the map to be routed to that location</p>
+            <p id="tourist_predictions">Your bus journey(s) will take: </p>
             <p><b>Search for attractions:</b></p>
             <input id="address" onClick="this.select();" type="textbox" class="form-control" placeholder="Enter a location">
                 <!-- Hidden fields are for storing lat lon not for showing -->
