fixed some small UI errors

--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -17,7 +17,7 @@
   </ul>
 
   <!-- Tab panes -->
-  <div class="tab-content col-md-6">
+  <div class="tab-content">
     <!-- This code is for the journey planner tab -->
     <div id="journey-planner" class="container tab-pane active">
       <button type="button" class="btn btn-primary" data-toggle="collapse" id="JP-btn">Hide Planner</button>
@@ -147,7 +147,7 @@
   </div>
 </div>
    <!-- This code displays the map -->
-    <div><div id="map"> hello </div></div>
+    <div id="map"> hello </div>
     <div id="infowindow-content">
       <img id="place-icon" src="" height="16" width="16" />
       <span id="place-name" class="title"></span><br />
