fixed needing to double click on the tourist submit button

--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -85,7 +85,7 @@
     <!-- This code is for the Tourism tab -->
     <div id="tourism" class="container tab-pane fade">
       <button type="button" class="btn btn-primary" data-toggle="collapse" id="tourist-btn">Hide Planner</button>
-      <div class="card col-md-8" id="tourism-card">
+      <div class="card col-md-4" id="tourism-card">
         <h3 class="card-title">Tourism</h3>
         
           <div id="locationList"></div>
@@ -138,8 +138,8 @@
     </div>
     <!-- This code is for the twitter tab -->
     <div id="twitter" class="container tab-pane fade">
-      <div class="col-md-8" id="twitter-card">
-      <h3 class="card-title">Dublin Bus Twitter</h3>
+      <div class="col-md-12" id="twitter-card">
+      <h3>Dublin Bus Twitter</h3>
       <a class="twitter-timeline" href="https://twitter.com/dublinbusnews?ref_src=twsrc%5Etfw">Tweets by dublinbusnews</a> 
       <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>   
@@ -148,12 +148,6 @@
 </div>
    <!-- This code displays the map -->
     <div id="map"> hello </div>
-    <div id="infowindow-content">
-      <img id="place-icon" src="" height="16" width="16" />
-      <span id="place-name" class="title"></span><br />
-      Place ID <span id="place-id"></span><br />
-      <span id="place-address"></span>
-    </div>
 
 <!-- modal -->
 
