--- a/django_server/dublin_bus/bus/static/bus/css/styles.css
+++ b/django_server/dublin_bus/bus/static/bus/css/styles.css
@@ -153,9 +153,11 @@ p, input, label {
 
   }
   #twitter-card{
+    position: relative;
     background-color: #fff;
     border: 1px solid#252d5a;
     height: 500px;
+    width: 100%;
     overflow: scroll;
     
   }
