added ability to delete favourite destination + some small fixes

--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -22,15 +22,15 @@
       <button type="button" class="btn btn-primary" data-toggle="collapse" id="JP-btn">Hide Planner</button>
       <div id="floating-panel" class="card col-md-8 collapse-show">
               <h3 class="card-title">Journey Planner  <i class="fas fa-cloud">15C</i></h3>
-              {% if user.is_authenticated %}
+              {% if user.is_authenticated and destinations|length > 0 %}
               <span>Take me to:
               <select id='favDestSelect'> 
                 {% for destination in destinations %}
                   <option>{{ destination.name }}</option>
                 {% endfor %}
               </select>
-              <button onclick='getCurLocation()'>Go!</button>
-            </span>
+              <button class="btn btn-warning btn-xs" onclick='getCurLocation()'>Go!</button>
+              </span><br>
               {% endif %}
               <form id="form1" class="form">
                 <div class="form-group">
@@ -50,7 +50,7 @@
                     <input type="hidden" id="stop_lng" />
                     <input type="hidden" id="stop_destination" />
                     {% if user.is_authenticated %}
-                    <input id='favDestBtn' type='button' class="btn btn-primary btn-sm" onclick="saveFavDestination()" value="Save Favourite Destination"></button> <br>
+                    <input id='favDestBtn' type='button' class="btn btn-primary btn-sm" onclick="saveFavDestination()" value="Save Favourite Destination"> <br>
                     <p id='FavDestResult'></p>
                     {% endif %}
                <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
