--- a/django_server/dublin_bus/bus/static/bus/css/styles.css
+++ b/django_server/dublin_bus/bus/static/bus/css/styles.css
@@ -185,3 +185,11 @@ p, input, label {
     padding: 3px 3px;
 }
 /* End of covifd modal  */
+
+/* adding extra small button group since no longer available in bootstrap 4 */
+.btn-group-xs > .btn, .btn-xs {
+    padding: .25rem .4rem;
+    font-size: .875rem;
+    line-height: .9;
+    border-radius: .2rem;
+  }
