--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -20,9 +20,9 @@
     <!-- This code is for the journey planner tab -->
     <div id="journey-planner" class="container tab-pane active">
       <button type="button" class="btn btn-primary" data-toggle="collapse" id="JP-btn">Hide Planner</button>
-      <div id="floating-panel" class="card col-sm-8 collapse-show">
+      <div id="floating-panel" class="card col-md-8 collapse-show">
               <h3>Journey Planner </h3>
-              <div class="col-sm-12" style="text-align:center; border: 1px solid#252d5a; border-radius: 15px;">
+              <div class="col-md-12" style="text-align:center; border: 1px solid#252d5a; border-radius: 15px;">
                 <b>Current Dublin Weather: </b>
                 {{weather_info.temp}}&#8451    
                 <img src="http://openweathermap.org/img/wn/{{weather_info.weather_icon}}@2x.png" style="background-color: lightslategray; border-radius: 30px; height: 50px;">
