limited the time between 5am and 12pm

--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -58,7 +58,7 @@
                     <input type="hidden" id="stop_lat" />
                     <input type="hidden" id="stop_lng" />
                     <input type="hidden" id="stop_destination" />
-               <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
+               <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
                
                   <label>Travel Date and Time:</label>
                   <div class="input-group date" data-provide="datepicker">
