--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -15,22 +15,18 @@
   </ul>
 
   <!-- Tab panes -->
-  <div class="tab-content">
+  <div class="tab-content col-md-6">
     <!-- This code is for the journey planner tab -->
     <div id="journey-planner" class="container tab-pane active">
       <button type="button" class="btn btn-primary" data-toggle="collapse" id="JP-btn">Hide Planner</button>
-      <div id="floating-panel" class="card col-md-8 collapse-show">
-
+      <div id="floating-panel" class="card collapse-show col-md-8">
               <h3>Journey Planner </h3>
-              <div class="col-md-12" style="text-align:center; border: 1px solid#252d5a; border-radius: 15px;">
+              <div style="text-align:center; border: 1px solid#252d5a; border-radius: 15px;">
                 <b>Current Dublin Weather: </b>
                 {{weather_info.temp}}&#8451    
                 <img src="http://openweathermap.org/img/wn/{{weather_info.weather_icon}}@2x.png" style="background-color: lightslategray; border-radius: 30px; height: 50px;">
             
               </div>
-
-              <h3 class="card-title">Journey Planner {{weather_info.temp}}&#8451<img src="http://openweathermap.org/img/wn/{{weather_info.weather_icon}}@2x.png"></h3>
-
                 <!-- ############################## weather notice #####################-->
                 {% if forecast %}
                     <div class="alert alert-secondary alert-dismissible fade show" role="alert">
@@ -126,7 +122,7 @@
     <div id="tourism" class="container tab-pane fade">
       <button type="button" class="btn btn-primary" data-toggle="collapse" id="tourist-btn">Hide Planner</button>
       <div class="col-md-12">
-       <div class="card col-sm-4 collapse-show" id="tourism-card">
+       <div class="card col-sm-8 collapse-show" id="tourism-card">
         <h3>Tourism</h3>
             <h2>Explore Dublin</h2>
             <p>Click anywhere on the map to be routed to that location.</p>
@@ -154,7 +150,7 @@
     <!-- This code is for the twitter tab -->
     <div id="twitter" class="container tab-pane fade">
     <div class="col-md-12">
-      <div class="col-md-12 collapse-show" id="twitter-card">
+      <div class="col-md-8 collapse-show" id="twitter-card">
       <h3>Dublin Bus Twitter</h3>
       <a class="twitter-timeline" href="https://twitter.com/dublinbusnews?ref_src=twsrc%5Etfw">Tweets by dublinbusnews</a> 
       <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
